--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "@tailwindcss/oxide": "^4.1.13",
+    "lightningcss": "^1.30.1",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
