--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@clerk/nextjs": "^6.32.2",
     "@next/font": "^14.2.15",
     "@tailwindcss/oxide": "^4.1.13",
+    "date-fns": "^4.1.0",
     "lightningcss": "^1.30.1",
     "next": "15.5.3",
     "react": "19.1.0",
